--- a/switching_reg.ipynb
+++ b/switching_reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,10 +29,10 @@
     "\n",
     "#set up regression mixture\n",
     "x1 = np.random.uniform(0, 10, size=400)\n",
-    "x2 = np.random.uniform(0, 2, size=600)\n",
+    "x2 = np.random.uniform(0, 10, size=600)\n",
     "\n",
-    "y1 = beta01 + beta11*x1 + np.random.normal(size=400)\n",
-    "y2 = beta02 + beta12*x2 + np.random.normal(size=600)\n",
+    "y1 = beta01 + beta11*x1 + np.random.normal(scale=2.0, size=400)\n",
+    "y2 = beta02 + beta12*x2 + np.random.normal(scale=4.0,size=600)\n",
     "\n",
     "x = np.concatenate([x1, x2])\n",
     "y = np.concatenate([y1, y2])\n",
@@ -46,38 +46,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "weights: [0.49368325 0.50631675]\n",
+      "weights: [0.59005892 0.40994108]\n",
       "========================================================\n",
       "\n",
-      "Optimization terminated successfully.\n",
-      "         Current function value: 2.432576\n",
-      "         Iterations: 200\n",
-      "         Function evaluations: 340\n",
+      "Warning: Maximum number of iterations has been exceeded.\n",
       "                               Clusters Results                               \n",
       "==============================================================================\n",
-      "Dep. Variable:                      y   Log-Likelihood:                -2432.6\n",
-      "Model:                       Clusters   AIC:                             4867.\n",
-      "Method:            Maximum Likelihood   BIC:                             4872.\n",
+      "Dep. Variable:                      y   Log-Likelihood:                -3116.5\n",
+      "Model:                       Clusters   AIC:                             6237.\n",
+      "Method:            Maximum Likelihood   BIC:                             6247.\n",
       "Date:                Mon, 22 Apr 2019                                         \n",
-      "Time:                        12:39:33                                         \n",
+      "Time:                        13:24:42                                         \n",
       "No. Observations:                1000                                         \n",
-      "Df Residuals:                     999                                         \n",
-      "Df Model:                           0                                         \n",
+      "Df Residuals:                     998                                         \n",
+      "Df Model:                           1                                         \n",
       "==============================================================================\n",
       "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const0         0.0334      0.059      0.568      0.570      -0.082       0.149\n",
-      "sigma0         1.0684      0.045     23.726      0.000       0.980       1.157\n",
-      "const1         4.9368      0.182     27.123      0.000       4.580       5.294\n",
-      "sigma1         2.9834      0.120     24.859      0.000       2.748       3.219\n",
+      "const0         2.2822      0.353      6.465      0.000       1.590       2.974\n",
+      "x10            4.0368      0.061     65.696      0.000       3.916       4.157\n",
+      "sigma0         4.0530      0.120     33.674      0.000       3.817       4.289\n",
+      "const1         4.8727      0.232     20.994      0.000       4.418       5.328\n",
+      "x11           -2.9709      0.038    -78.415      0.000      -3.045      -2.897\n",
+      "sigma1         1.9963      0.075     26.485      0.000       1.849       2.144\n",
       "==============================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:508: ConvergenceWarning: Maximum Likelihood optimization failed to converge. Check mle_retvals\n",
+      "  \"Check mle_retvals\", ConvergenceWarning)\n"
      ]
     }
    ],
@@ -110,7 +231,9 @@
     "            sigma = comp_params[-1]\n",
     "            \n",
     "            beta = np.tile(beta,nobs).reshape(nobs, k)\n",
+    "            \n",
     "            resid = self.endog - (beta*self.exog).sum(axis=1)\n",
+    "            \n",
     "            like = stats.norm.pdf(resid, loc=0, scale=sigma)\n",
     "            comp_likes.append(like)\n",
     "            \n",
@@ -133,7 +256,7 @@
     "        \n",
     "        while diff > tol and maxiter >=0 :\n",
     "\n",
-    "            start = np.array([1.]*len(self.data.xnames))\n",
+    "            start = np.array([1.1]*len(self.data.xnames))\n",
     "            model = super(Clusters, self).fit(disp=False, start_params= start)\n",
     "            weights = []\n",
     "            \n",
@@ -171,10 +294,29 @@
     "        return model\n",
     "        \n",
     "#test case #1 - easy 2 component mixture\n",
-    "model = Clusters(a, np.ones( (a.shape[0],1)))\n",
+    "\n",
+    "model = Clusters(y, sm.add_constant(x))\n",
     "result = model.fit()\n",
     "\n",
+    "\n",
     "print result.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'converged': False, 'warnflag': 2, 'fcalls': 767, 'fopt': 3.1505689986271417, 'iterations': 500}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print result.mle_retvals"
    ]
   },
   {
