working with statsmodels package

--- a/cond_mix.ipynb
+++ b/cond_mix.ipynb
@@ -17,31 +17,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index([u'ROW', u'SYSTEM', u'COUNTY', u'MRKTCODE', u'VENDOR', u'MONTH', u'DAY',\n",
-      "       u'YEAR', u'LFC', u'LFW', u'WW', u'WC', u'QLFC', u'QLFW', u'QWW', u'QWC',\n",
-      "       u'ESTQTY', u'QUANTITY', u'FMOZONE', u'DEL', u'ESC', u'COOLER', u'MILES',\n",
-      "       u'WIN', u'NUMSCHL', u'NUMWIN', u'I', u'GAS', u'FMO', u'N', u'BACKLOG'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "#load data\n",
-    "data = pd.read_csv('data/milk_join.csv')\n",
-    "data.set_index('ROW')\n",
-    "\n",
-    "print data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -49,16 +24,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WW         -1.768216\n",
-      "FMO         2.672613\n",
-      "ESC         0.737441\n",
-      "NUMSCHL    12.544541\n",
-      "MILES       3.456749\n",
-      "COOLER      0.736772\n",
-      "GAS         2.864354\n",
-      "DEL         4.262827\n",
-      "ESTQTY     12.857605\n",
-      "NOSTOP      3.346037\n",
+      "Index([u'VENDOR', u'WW', u'WC', u'LFW', u'LFC', u'SYSTEM', u'YEAR', u'MONTH',\n",
+      "       u'DAY', u'FMOZONE', u'ESC', u'COOLER', u'QLFC', u'QLFW', u'QWW', u'QWC',\n",
+      "       u'ESTQTY', u'DEL', u'MILES', u'NUMSCHL', u'NUMWIN', u'POPUL', u'ADJPOP',\n",
+      "       u'NUM', u'GAS', u'FMO'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "#load data\n",
+    "data = pd.read_csv('data/milk.csv')\n",
+    "\n",
+    "print data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WW         -1.765440\n",
+      "FMO         2.671482\n",
+      "ESC         0.688122\n",
+      "NUMSCHL    13.326476\n",
+      "MILES       3.460028\n",
+      "COOLER      0.745189\n",
+      "GAS         2.850368\n",
+      "DEL         4.250100\n",
+      "ESTQTY     12.878556\n",
+      "NOSTOP      3.357486\n",
       "dtype: float64\n"
      ]
     }
@@ -82,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4050, 1)\n",
-      "(3926, 2)\n",
-      "(3987, 1)\n",
-      "(3202, 1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print data[['WW']].dropna().shape\n",
     "print data[['WW','FMO']].dropna().shape\n",
